--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - ./frontend:/usr/share/nginx/html
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
   client:
-    image: peoplepartyportel
+    image: peoplepartyportal
     build:
       context: ./frontend
       dockerfile: dockerfile
