Added conan package manager

--- a/backend/CMakeLists.txt
+++ b/backend/CMakeLists.txt
@@ -6,45 +6,10 @@ set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 ### Dependencies ###
-
-# Get doctest
-include(FetchContent)
-
-FetchContent_Declare(
-        doctest
-        GIT_REPOSITORY https://github.com/doctest/doctest.git
-        GIT_TAG ae7a13539fb71f270b87eb2e874fbac80bc8dda2 # v2.4.6
-)
-FetchContent_MakeAvailable(doctest)
-
-# uSocket and uWebSockets stuff
-FetchContent_Declare(
-        uSockets_content
-        GIT_REPOSITORY https://github.com/uNetworking/uSockets
-        GIT_TAG 833497e8e0988f7fd8d33cd4f6f36056c68d225d
-        GIT_SHALLOW ON
-        GIT_SUBMODULES ""
-)
-FetchContent_MakeAvailable(uSockets_content)
-file(GLOB_RECURSE SOURCES ${usockets_content_SOURCE_DIR}/src/*.c)
-add_library(uSockets ${SOURCES})
-target_include_directories(uSockets PUBLIC ${usockets_content_SOURCE_DIR}/src)
-target_compile_definitions(uSockets PRIVATE LIBUS_NO_SSL UWS_NO_ZLIB)
-
-FetchContent_Declare(
-        uWebSockets_content
-        GIT_REPOSITORY https://github.com/uNetworking/uWebSockets
-        GIT_TAG v20.62.0
-        GIT_SHALLOW ON
-        GIT_SUBMODULES ""
-)
-FetchContent_MakeAvailable(uWebSockets_content)
-add_library(uWebSockets INTERFACE)
-target_include_directories(uWebSockets INTERFACE ${uwebsockets_content_SOURCE_DIR}/src/)
-target_link_libraries(uWebSockets INTERFACE uSockets)
+find_package(uwebsockets REQUIRED)
+find_package(doctest)
 
 ### Main project ###
-
 # Get source files
 set(backend_source_dir ${CMAKE_CURRENT_SOURCE_DIR}/src)
 
@@ -57,10 +22,9 @@ file(GLOB_RECURSE source_files
 add_executable(PeopleParty-Backend ${source_files})
 
 # Link dependencies
-target_link_libraries(PeopleParty-Backend uWebSockets)
+target_link_libraries(PeopleParty-Backend uwebsockets::uwebsockets)
 
 ### Tests ###
-
 # Enable testing
 include(CTest)
 
@@ -79,5 +43,5 @@ add_executable(PeopleParty-Backend-Tests ${test_files})
 target_link_libraries(PeopleParty-Backend-Tests doctest::doctest)
 
 # Enable CTest
-include(${doctest_SOURCE_DIR}/scripts/cmake/doctest.cmake)
-doctest_discover_tests(PeopleParty-Backend-Tests)
+#include(${doctest_SOURCE_DIR}/scripts/cmake/doctest.cmake)
+#doctest_discover_tests(PeopleParty-Backend-Tests)
