--- a/.github/workflows/deploy-skylab.yml
+++ b/.github/workflows/deploy-skylab.yml
@@ -11,6 +11,7 @@ on:
 jobs:
   copy:
     name: Copy files to Skylab
+    environment: main
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
