Updated deploy workflow

--- a/.github/workflows/deploy-skylab.yml
+++ b/.github/workflows/deploy-skylab.yml
@@ -11,7 +11,6 @@ on:
 jobs:
   copy:
     name: Copy files to Skylab
-    environment: main
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -34,5 +33,5 @@ jobs:
         password: ${{ secrets.PASSWORD }}
         port: ${{ secrets.PORT }}
         script: |
-          docker-compose pull
-          docker-compose -f docker-compose.yml up --build -d --force-recreate
+          docker compose pull
+          docker compose -f docker-compose.yml up --build -d --force-recreate
