Finally working deploy workflow

--- a/.github/workflows/deploy-skylab.yml
+++ b/.github/workflows/deploy-skylab.yml
@@ -11,11 +11,10 @@ on:
 jobs:
   copy:
     name: Copy files to Skylab
+    environment: main
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - name: debug
-      run: echo "${{ toJson(secrets) }}"
     - name: copy file via ssh
       uses: appleboy/scp-action@v0.1.7
       with:
