--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
 version: '3.8'
 services:
   nginx:
-    image: peoplepartyproxy
     build:
       context: ./nginx
       dockerfile: Dockerfile
@@ -12,7 +11,7 @@ services:
       - ./frontend:/usr/share/nginx/html
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
   client:
-    image: peoplepartyportal
+    image: ghcr.io/kraanter/peoplepartyportal
     build:
       context: ./frontend
       dockerfile: dockerfile
