--- a/frontend/tsconfig.cypress-ct.json
+++ b/frontend/tsconfig.cypress-ct.json
@@ -3,6 +3,7 @@
   "include": [
     "env.d.ts",
     "src/**/*",
+    "src/**/*.ts",
     "src/**/*.vue",
     "cypress/support/component.*",
     "cypress/support/commands.ts"
