--- a/package.json
+++ b/package.json
@@ -3,7 +3,15 @@
     "version": "0.0.0",
     "license": "MIT",
     "scripts": {
-      "start": "docker-compose -f docker-compose.yml up --build"
+      "start": "docker-compose -f docker-compose.yml up --build",
+
+      "flatbuffers:all": "npm run build:flatbuffer  && npm run move:flatbuffer",
+
+      "build:flatbuffer": "bash schemes/builder.sh && flatc --cpp --ts -o fbsout/ schemes/messageClass.fbs --gen-all",
+      "move:flatbuffer": "npm run move:flatbuffer:prepare && npm run move:flatbuffer:move && npm run move:flatbuffer:cleanup",
+      "move:flatbuffer:prepare": "mkdir backend\\src\\flatbuffer\\ || mkdir frontend\\src\\flatbuffers\\ || exit 0",
+      "move:flatbuffer:move": "move fbsout\\messageClass_generated.h backend\\src\\flatbuffer\\ && move fbsout\\*.ts frontend\\src\\flatbuffers\\",
+      "move:flatbuffer:cleanup": "rmdir /s /q fbsout"
     },
     "private": true
   }
