--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -3,7 +3,8 @@ server {
     server_name _;
 
     location / {
-        proxy_pass http://client;
+        # proxy to http://client/ always with no other location
+        proxy_pass http://client/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -11,13 +12,35 @@ server {
         proxy_redirect off;
     }
 
-    location ~ ^/(confetti) {
-        proxy_pass http://api;
-        # enable WebSockets
+    location /host {
+        # proxy to http://client/host/ for requests to /host
+        proxy_pass http://client/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_redirect off;
+    }
+
+    location /join {
+        # proxy to http://client/host/ for requests to /host
+        proxy_pass http://client/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_redirect off;
+    }
+
+    location /confetti/ {
+        proxy_pass http://api:7899/;
+        # enable WebSockets
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 }
