--- a/.github/workflows/staging-publish.yml
+++ b/.github/workflows/staging-publish.yml
@@ -48,6 +48,6 @@ jobs:
   deploy-skylab:
     needs: "build-and-push-image"
     uses: ./.github/workflows/staging-deploy.yml
-    if: ${{ inputs.deploy-skylab || github.ref === 'refs/heads/staging' }}
+    if: ${{ inputs.deploy-skylab || github.ref == 'refs/heads/staging' }}
     secrets: inherit
 
