--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "pinia": "^2.1.7",
     "pixi.js": "^8.1.0",
     "vue": "^3.4.21",
+    "vue-flip": "^3.0.2",
     "vue-router": "^4.3.0",
     "vue3-pixi": "^0.9.1"
   },
