--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,7 @@
     "e": "^0.2.33",
     "flatbuffers": "^24.3.25",
     "pinia": "^2.1.7",
-    "pixi.js": "^8.1.0",
+    "pixi.js": "^7.*",
     "vue": "^3.4.21",
     "vue-flip": "^3.0.2",
     "vue-router": "^4.3.0",
