--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -3,6 +3,7 @@
   "include": ["env.d.ts", "src/**/*", "src/**/*.ts", "src/**/*.vue"],
   "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
+    "strict": false,
     "composite": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
 
