--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -1,6 +1,6 @@
 FROM node:20.11.1-alpine as build-stage
 WORKDIR /app
-COPY package.json ./
+COPY package* ./
 RUN npm install
 COPY . .
 RUN npm run build
