--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -41,6 +41,15 @@ server {
         proxy_redirect off;
     }
 
+    location /releases {
+        proxy_pass http://client/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_redirect off;
+    }
+
     location /confetti/ {
         proxy_pass http://api:7899/;
         # enable WebSockets
