--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -29,5 +29,6 @@ FROM alpine:3.17.0
 RUN apk update && \
     apk add --no-cache \
     libstdc++
+COPY --from=build /app/src/minigames /src/minigames
 COPY --from=build /app/build/PeopleParty-Backend /build/PeopleParty-Backend
 CMD ["./build/PeopleParty-Backend"]
