Fix visual bug in releases and disable the tests

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,10 +1,12 @@
 name: Cypress tests
 
-on: 
-  pull_request:
-    branches:
-      - main
-      - staging
+# on: 
+#   pull_request:
+#     branches:
+#       - main
+#       - staging
+
+on: workflow_dispatch
 
 jobs:
   cypress-tests:
