--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "pixi.js": "^7.*",
     "vue": "^3.4.21",
     "vue-flip": "^3.0.2",
+    "vue-joystick-component": "^0.1.3",
     "vue-router": "^4.3.0",
     "vue3-pixi": "^0.9.1"
   },
