--- a/docker-compose-staging.yml
+++ b/docker-compose-staging.yml
@@ -7,11 +7,14 @@ services:
     ports:
       - 7889:80
     restart: always
+    platform: linux/amd64
     volumes:
       - ./frontend:/usr/share/nginx/html
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
   client:
     image: ghcr.io/kraanter/peoplepartyportal:staging
+    platform: linux/amd64
   api:
     image: ghcr.io/kraanter/peoplepartybackend:staging
     restart: unless-stopped
+    platform: linux/amd64
